--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "process": "0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-focus-lock": "^2.9.6",
+    "react-remove-scroll": "^2.5.7",
     "rimraf": "5.0.1"
   },
   "scripts": {
